docker/azure/go-hw-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-hw-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /gohw(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: go-hw
            port:
              number: 80
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: go-hw
            port:
              number: 80
      - path: /hello-world-one(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
